<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComposeActivity">

    <EditText
        android:id="@+id/etTweetBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bvTweetButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="top|start"
        android:hint="@string/compose_body_hint"
        android:maxLength="140" />

    <Button
        android:id="@+id/bvTweetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/twitter_blue"
        android:textColor="@color/white"
        android:text="@string/tweet_button_label"
        android:onClick="onSubmit"/>

    <TextView
        android:id="@+id/tvCharCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/bvTweetButton"
        android:text="@string/max_char" />

</RelativeLayout>